--- a/menu.html
+++ b/menu.html
@@ -50,10 +50,22 @@
         </div>
     </nav>
 
-    <!-- Page Content Placeholder -->
+    <!-- Page Content -->
     <main class="container mx-auto px-4 py-8">
-        <h1 class="text-3xl font-bold text-center mt-10">Our Menu</h1>
-        <p class="text-center text-gray-500 mt-2">Check out our delicious dishes.</p>
+        <h1 class="text-3xl font-bold text-center mt-10 mb-8">Our Menu</h1>
+        <p class="text-center text-gray-500 mb-10 max-w-2xl mx-auto">Choose from a diverse menu featuring a delectable
+            array of dishes. Our mission is to satisfy your cravings and elevate your dining experience, one delicious
+            meal at a time.</p>
+
+        <!-- Category Filter -->
+        <div id="category-filter" class="flex flex-wrap justify-center gap-4 mb-12">
+            <!-- Categories injected by app.js -->
+        </div>
+
+        <!-- Food Display -->
+        <div id="food-display" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-y-8 gap-x-6">
+            <!-- Food items injected by app.js -->
+        </div>
     </main>
 
 </body>
