all the changes has been done

--- a/menu.html
+++ b/menu.html
@@ -64,10 +64,9 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex items-center justify-between h-16">
         <a href="index.html" class="flex items-center gap-2">
-          <div class="w-10 h-10 bg-gradient-to-br from-orange-400 to-orange-600 rounded-xl flex items-center justify-center">
-            <span class="text-white text-xl">🍽️</span>
+          <div class="w-40 h-30 mt-2">
+            <img src="./assets/frontend_assets/logo.png" alt="Pasa Foods Logo" class="w-full h-full object-cover">
           </div>
-          <span class="text-xl font-bold text-gray-800">pasa<span class="text-orange-500">-foods</span></span>
         </a>
 
         <div class="hidden md:flex items-center gap-8">
@@ -278,7 +277,7 @@
     </div>
   </div>
 
-  <script src="assets.js"></script>
+  <script src="./assets/frontend_assets/assets.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
