--- a/index.html
+++ b/index.html
@@ -69,10 +69,9 @@
       <div class="flex items-center justify-between h-16">
         <!-- Logo -->
         <a href="index.html" class="flex items-center gap-2">
-          <div class="w-10 h-10 bg-gradient-to-br from-orange-400 to-orange-600 rounded-xl flex items-center justify-center">
-            <span class="text-white text-xl">🍽️</span>
+          <div class="w-40 h-30 mt-2">
+            <img src="./assets/frontend_assets/logo.png" alt="Pasa Foods Logo" class="w-full h-full object-cover">
           </div>
-          <span class="text-xl font-bold text-gray-800">pasa<span class="text-orange-500">-foods</span></span>
         </a>
 
         <!-- Desktop Nav Links -->
@@ -137,13 +136,13 @@
     <div class="max-w-7xl mx-auto">
       <div class="relative rounded-3xl overflow-hidden bg-gradient-to-r from-orange-500 to-orange-600 min-h-[400px] md:min-h-[500px]">
         <div class="absolute inset-0">
-          <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?w=1200&h=600&fit=crop" 
+          <img src="./assets/frontend_assets/header_img.png" 
                alt="Delicious Food" 
                class="w-full h-full object-cover opacity-30">
         </div>
         <div class="relative z-10 flex flex-col items-center justify-center text-center p-8 md:p-16 min-h-[400px] md:min-h-[500px]">
           <span class="bg-white/20 text-white px-4 py-1 rounded-full text-sm font-medium mb-4 backdrop-blur-sm">
-            🚀 Free Delivery on First Order
+             Free Delivery on First Order
           </span>
           <h1 class="text-4xl md:text-6xl font-extrabold text-white mb-4 leading-tight">
             Fast & Fresh Food<br>Delivered to You
@@ -268,12 +267,11 @@
     <div class="max-w-7xl mx-auto">
       <div class="grid md:grid-cols-4 gap-8">
         <div>
-          <div class="flex items-center gap-2 mb-4">
-            <div class="w-10 h-10 bg-gradient-to-br from-orange-400 to-orange-600 rounded-xl flex items-center justify-center">
-              <span class="text-white text-xl">🍽️</span>
-            </div>
-            <span class="text-xl font-bold">pasa<span class="text-orange-500">-foods</span></span>
-          </div>
+          <a href="index.html" class="flex items-center gap-2">
+                <div class="w-40 h-30 mt-2">
+                    <img src="./assets/frontend_assets/logo.png" alt="Pasa Foods Logo" class="w-full h-full object-cover">
+                </div>
+         </a>
           <p class="text-gray-400 text-sm">Delivering happiness to your doorstep since 2024</p>
         </div>
         <div>
@@ -393,7 +391,7 @@
     </div>
   </div>
 
-  <script src="assets.js"></script>
+  <script src="./assets/frontend_assets/assets.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
