--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menu - Pasa Foods</title>
   <meta name="description" content="Explore our delicious menu at Pasa Foods. Pizza, burgers, sushi, salads and more!">
+  <!-- remix icon -->
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -153,10 +155,7 @@
       <div class="grid md:grid-cols-4 gap-8">
         <div>
           <div class="flex items-center gap-2 mb-4">
-            <div class="w-10 h-10 bg-gradient-to-br from-orange-400 to-orange-600 rounded-xl flex items-center justify-center">
-              <span class="text-white text-xl">🍽️</span>
-            </div>
-            <span class="text-xl font-bold">pasa<span class="text-orange-500">-foods</span></span>
+            <span class="text-xl font-bold text-orange-500">pasa<span class="text-orange-500">-foods</span></span> 
           </div>
           <p class="text-gray-400 text-sm">Delivering happiness to your doorstep since 2024</p>
         </div>
@@ -179,9 +178,9 @@
         <div>
           <h4 class="font-semibold mb-4">Contact</h4>
           <ul class="space-y-2 text-gray-400 text-sm">
-            <li>📍 123 Food Street, City</li>
-            <li>📞 +1 234 567 890</li>
-            <li>✉️ hello@pasafoods.com</li>
+            <li><i class="ri-map-pin-fill"></i> 123 Food Street, City</li>
+            <li><i class="ri-phone-fill"></i> +1 234 567 890</li>
+            <li><i class="ri-mail-fill"></i> hello@pasafoods.com</li>
           </ul>
         </div>
       </div>
