--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pasa Foods - Fast & Fresh Food Delivery</title>
   <meta name="description" content="Order delicious food online with Pasa Foods. Fast delivery, fresh ingredients, and amazing taste!">
+  <link rel="icon" href="./assets/frontend_assets/logo.png" type="image/png">
+  <!-- remix icon -->
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+   
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -239,21 +243,21 @@
       <div class="grid md:grid-cols-3 gap-8">
         <div class="bg-white rounded-2xl p-8 text-center shadow-sm hover:shadow-lg transition-shadow">
           <div class="w-16 h-16 bg-orange-100 rounded-2xl flex items-center justify-center mx-auto mb-4">
-            <span class="text-3xl">🚀</span>
+            <i class="ri-rocket-fill text-3xl text-orange-500"></i>
           </div>
           <h3 class="font-bold text-xl text-gray-800 mb-2">Fast Delivery</h3>
           <p class="text-gray-500">Get your food delivered in 30 minutes or less, hot and fresh!</p>
         </div>
         <div class="bg-white rounded-2xl p-8 text-center shadow-sm hover:shadow-lg transition-shadow">
           <div class="w-16 h-16 bg-orange-100 rounded-2xl flex items-center justify-center mx-auto mb-4">
-            <span class="text-3xl">🍳</span>
+            <i class="ri-leaf-fill text-3xl text-orange-500"></i>
           </div>
           <h3 class="font-bold text-xl text-gray-800 mb-2">Fresh Ingredients</h3>
           <p class="text-gray-500">We use only the freshest ingredients for every dish we prepare</p>
         </div>
         <div class="bg-white rounded-2xl p-8 text-center shadow-sm hover:shadow-lg transition-shadow">
           <div class="w-16 h-16 bg-orange-100 rounded-2xl flex items-center justify-center mx-auto mb-4">
-            <span class="text-3xl">💝</span>
+            <i class="ri-price-tag-3-fill text-3xl text-orange-500"></i>
           </div>
           <h3 class="font-bold text-xl text-gray-800 mb-2">Best Prices</h3>
           <p class="text-gray-500">Enjoy delicious meals at affordable prices with great deals</p>
@@ -293,9 +297,9 @@
         <div>
           <h4 class="font-semibold mb-4">Contact</h4>
           <ul class="space-y-2 text-gray-400 text-sm">
-            <li>📍 123 Food Street, City</li>
-            <li>📞 +1 234 567 890</li>
-            <li>✉️ hello@pasafoods.com</li>
+            <li><i class="ri-map-pin-fill"></i> 123 Food Street, City</li>
+            <li><i class="ri-phone-fill"></i> +1 234 567 890</li>
+            <li><i class="ri-mail-fill"></i> hello@pasafoods.com</li>
           </ul>
         </div>
       </div>
